Fix discarded card Z-index

--- a/src/ui/board/Board.module.css
+++ b/src/ui/board/Board.module.css
@@ -170,4 +170,5 @@ with this program. If not, see <https://www.gnu.org/licenses/>.
 .board .discarded {
   top: var(--dungeonDeckTop);
   left: var(--col2Left);
+  z-index: 1;
 }
